--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hyde-14"]
 	path = themes/hyde-14
 	url = https://github.com/lroguet/hyde-14.git
+[submodule "themes/hyde"]
+	path = themes/hyde
+	url = git@github.com:spf13/hyde
